# unlearning

./: .gitignore  .requirements_exact.txt  LICENSE  README.md  example_job.sh  grid_search.sh  pyproject.toml  reproducibility.txt  requirements.txt  run_exps.sh
archive/: 0_autocreation.py  generation2.py  isu3_column_or_row_aggr_and_a_gem_overshoot.py  mlp_clustering.py  per_module_exp.py  per_module_exp_plot.py  precomputed_no_retain.py  snippets.py
configs/: 1B_main_comparison_llama_bio.yaml  2_cir.yaml  8b_retaining.yaml  8b_threats.yaml  CIR_simple.yaml  cb.yaml  cb_losses_plot.yaml  cb_target_modules_plot.yaml  context_nondisruption.yaml  datasets.yaml  datasets1.yaml  datasets2.yaml  datasets3.yaml  deeb_bounce.yaml  input_specific_unlearning.yaml  layer_search.yaml  main_comparison_llama.yaml  main_comparison_llama_bio.yaml  main_comparison_llama_bio_2perc.yaml  main_comparison_llama_cyber.yaml  mlp_confuse.yaml  per_module_exp.yaml  precomputed_no_retain.yaml  proj_num_grid_search.yaml  proj_num_grid_search2.yaml  reverting_retain.yaml  single_question_exp.yaml  transferability.yaml  wmdp_main.yaml
data/: README.md  breaking_points_plot.npz  cyber_per_answer_accuracies.json  cyber_per_answer_accuracies.txt  wmdp_deduped_correct_answers_corpus.jsonl  wmdp_deduped_wrong_answers_corpus.jsonl
src/: 0_autocreation.py  0_grad_similarity.py  0_transferability_per_token.py  1.1_deception_static_proj.py  1.2_facts_common_core.py  1.5_pre_mlp_activation.py  1_isu2_pre_mlp_activation.py  2_proj_training.py  CIR.py  CIR_no_trainer.py  CIR_trainer.py  generation.py  (+17 more)
(+85 files in other folders)
